写了些感悟

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -95,6 +95,7 @@ nav:
             - 'tech/Convert MP4 to GIF With FFmpeg.md'
             - 'tech/jupyterhub.md'
             - 'tech/tech share.md'
+            - 'tech/bluegogo-crack.md'
         - Jenkins:
             - 导览: jenkins/guide/index.md
             - 第一个管道: jenkins/guide/first-pipeline.md
