add wu zhen plan

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -77,6 +77,7 @@ nav:
         - 支付宝集福: 'life/alipay-scan-fu-icon.md'
         - 北京租房: 'life/Renting in Beijing.md'
         - 古北水镇游玩: 'life/Gu Bei Shui Zhen.md'
+        - 乌镇游玩: 'life/WuZhen.md'
         - 我的世界游戏: 'minecraft/minecraft.md'
     - Geek:
         - Git核心技能: 'geek/Git.md'
