--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -71,14 +71,15 @@ nav:
         - 简介: 'index.md'
         - 博客创建过程: 'How I create this blog.md'
     - 工作:
-        - 求职: 'job/My Plan for finding Job.md'
+        - 校招求职: 'job/My Plan for finding Job.md'
+        - 社招面试: "iOS/review.md"
+        - 面试准备资料: "iOS/job-plan.md"
         - 离职: 'job/dimission.md'
     - 生活:
         - 支付宝集福: 'life/alipay-scan-fu-icon.md'
         - 北京租房: 'life/Renting in Beijing.md'
         - 古北水镇游玩: 'life/Gu Bei Shui Zhen.md'
         - 乌镇游玩: 'life/WuZhen.md'
-        - 我的世界游戏: 'minecraft/minecraft.md'
     - Geek:
         - WireGuard: 'geek/wireguard.md'
         - Git核心技能: 'geek/Git.md'
@@ -140,8 +141,6 @@ nav:
             - 逆向工程: "iOS/reverse.md"
             - 应用优化: "iOS/optimization.md"
             - 优化应用启动时长: 'geek/Optimizing App Startup Time.md'
-            - 面试: "iOS/review.md"
-            - 面试准备资料: "iOS/job-plan.md"
             - 十大排序算法: "iOS/sort.md"
             - OC运行时编译: "iOS/runtime.md"
             - 线程编码指南: "iOS/TPG.md"
