--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,7 +34,10 @@ markdown_extensions:
       permalink: true
   - pymdownx.arithmatex
   - pymdownx.betterem:
-      smart_enable: all
+    #   smart_enable: all
+    #   smart_enable: asterisk
+    #   smart_enable: underscore
+      smart_enable: none
   - pymdownx.caret
   - pymdownx.critic
   - pymdownx.details
@@ -51,7 +54,7 @@ markdown_extensions:
 
 extra_javascript:
   - 'javascripts/extra.js'
-  - 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML'
+  - 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML'
 
 extra_css:
   - 'stylesheets/extra.css'
