--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -177,4 +177,5 @@ nav:
         - 人在北京: 'me/Life in Beijing.md'
         - 硬件: 'me/my hardware.md'
         - 早起记录: 'me/Personal Pre-Work Record.md'
+        - 存款计划: 'me/deposit scheme.md'
         
