--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -174,7 +174,7 @@ nav:
                 - "music/theory/appendixes/A.md"
     - 关于我: 
         - 理财: 'me/My Financial Planning.md'
-        - 人在北京: 'me/Life in Beijing.md'
+        # - 人在北京: 'me/Life in Beijing.md'
         - 硬件: 'me/my hardware.md'
         - 早起记录: 'me/Personal Pre-Work Record.md'
         - 存款计划: 'me/deposit scheme.md'
